syntax = "proto2";
package openscq30;

option java_package = "com.oppzippy.openscq30.lib.protobuf";
option java_multiple_files = true;

enum PresetEqualizerProfile {
  SOUNDCORE_SIGNATURE = 0;
  ACOUSTIC = 1;
  BASS_BOOSTER = 2;
  BASS_REDUCER = 3;
  CLASSICAL = 4;
  PODCAST = 5;
  DANCE = 6;
  DEEP = 7;
  ELECTRONIC = 8;
  FLAT = 9;
  HIP_HOP = 10;
  JAZZ = 11;
  LATIN = 12;
  LOUNGE = 13;
  PIANO = 14;
  POP = 15;
  RNB = 16;
  ROCK = 17;
  SMALL_SPEAKERS = 18;
  SPOKEN_WORD = 19;
  TREBLE_BOOSTER = 20;
  TREBLE_REDUCER = 21;
}

message EqualizerConfiguration {
  optional PresetEqualizerProfile preset_profile = 1;
  repeated double volume_adjustments = 2;
}

message StereoVolumeAdjustments {
  repeated double left = 1;
  repeated double right = 2;
}

message PresetEqualizerProfileSelection {
  required PresetEqualizerProfile preset_profile = 1;
}
